--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Application</title>
-    <link rel="stylesheet" href="/storage/style/index.css" />
+    <link rel="stylesheet" href="./storage/style/index.css" />
   </head>
   <body>
     <main>
       <h2><<< TEST APPLICATION >>></h2>
       <section>
-        <a href="/pages/test.html" class="button">Start</a>
-        <a href="/pages/modify.html" class="button">Modify Questions</a>
+        <a href="./pages/test.html" class="button">Start</a>
+        <a href="./pages/modify.html" class="button">Modify Questions</a>
         <a onclick="copy(document.cookie)" class="button">Copy cookies</a>
       </section>
     </main>
