--- a/pages/test.html
+++ b/pages/test.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/storage/style/index.css" />
+    <link rel="stylesheet" href="./storage/style/index.css" />
     <script
       type="module"
-      src="/storage/scripts/startTest.js"
+      src="./storage/scripts/startTest.js"
       defer="defer"
     ></script>
   </head>
   <body>
     <main>
-      <a href="/index.html"><h2><<< TEST APPLICATION</h2></a>
+      <a href="./index.html"><h2><<< TEST APPLICATION</h2></a>
       <section id="questionPanel">
         <h2 id="timer">00:30</h2>
         <h1 id="question">
