--- a/pages/add.html
+++ b/pages/add.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./storage/style/index.css" />
+    <link rel="stylesheet" href="../storage/style/index.css" />
     <script
       type="module"
-      src="./storage/scripts/submitQuestion.js"
+      src="../storage/scripts/submitQuestion.js"
       defer="defer"
     ></script>
   </head>
   <body>
     <main>
-      <a href="./pages/modify.html"><h2><<< MODIFY QUESTIONS</h2></a>
+      <a href="./modify.html"><h2><<< MODIFY QUESTIONS</h2></a>
       <section>
         <form>
           <div class="inputWrap">
