--- a/pages/modify.html
+++ b/pages/modify.html
@@ -13,7 +13,7 @@
         <a href="./add.html" class="button">Add Questions</a>
         <a href="./remove.html" class="button">Remove Questions</a>
         <a
-          onclick='if(confirm("Are you sure you want to delete all the questions?")){ copy(document.cookie); alert("Questions copied to the clipboard and deleted from the browser."); document.cookie = "questions=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";}'
+          onclick="if(confirm('Are you sure you want to delete all the questions?')){ copy(document.cookie); alert('Questions copied to the clipboard and deleted from the browser.'); document.cookie = 'questions=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;';}"
           class="button"
           >Delete all</a
         >
